# 2026_ws

./: .gitignore  cyclonedds.xml  howtorun.md  mppi_project.md  requirements.txt
arduino/encoder_ppr_measure/: encoder_ppr_measure.ino
arduino/ls7366r_meters_per_pulse/: ls7366r_meters_per_pulse.ino
arduino/mando_final/: mando_final.ino
arduino/mando_final_ls7366r/: mando_final_ls7366r.ino
arduino/mando_final_ver2/: mando_final_ver2.ino
arduino/mando_serial_monitor.ino/: mando_serial_monitor.ino
arduino/mando_ver1/: description.md
arduino/mando_ver2/: description.md  mando_ver2.ino
arduino/wheel_encoder_test/: wheel_encoder_test.ino
docs/: mppi_project.md
rviz/: mppi.rviz  raw_ekf_compare.rviz
src/bridge_pkg/: package.xml  setup.cfg  setup.py
src/bridge_pkg/bridge_pkg/: serial_bridge.py
src/bridge_pkg/config/: bridge_params.yaml
src/bridge_pkg/resource/: bridge_pkg
src/ebimu_pkg/config/: imu_only_params.yaml
src/ebimu_pkg/ebimu_pkg/: ebimu_publisher.py  encoder_imu_odometry.py
src/encoder_pkg/: setup.py
src/encoder_pkg/encoder_pkg/: encoder_5m_demo.py  encoder_publisher.py
src/gnss_pkg/: README.md
src/imu_pkg/: package.xml  setup.py
src/mppi_bringup/: package.xml  setup.cfg  setup.py
src/mppi_bringup_pkg/: package.xml  setup.cfg  setup.py
src/mppi_bringup_pkg/launch/: mppi_controller.launch.py
src/odom_pkg/: package.xml  setup.py
src/simulator_pkg/: package.xml  setup.cfg  setup.py
utils/archived_imu_odometry/: README.md  imu_odometry.py  imu_odometry_params.yaml
utils/encoder_test/: encoder_mark_log.csv
(+27 files in other folders)
